# ExecutableRunner-Android

./: UpcomingReleaseNotes.md  build.gradle  doincrementversion  getVersion.sh  settings.gradle
.github/: installAndroidTools.sh
.github/workflows/: build.yml  privilegedBuild.yml  publishRelease.yml  unprivilegedBuild.yml
ExecutableRunner/: build.gradle
ExecutableRunner/src/main/: AndroidManifest.xml
ExecutableRunner/src/main/java/com/viliussutkus89/android/executablerunner/: ExecutableRunner.java
ExecutableRunner/src/main/java/com/viliussutkus89/executablerunner/: ExecutableRunner.java
ci-scripts/: getVersion  incrementVersion  prepareLibraryTestsForStagingRepository  updateDownstreamVersion
tests/: build.gradle
tests/src/androidTest/cpp/: CMakeLists.txt  executableLinkedAgainstLibrary.cpp  nativeLib.cpp  nativeLib.h  simpleProgram.cpp  verifyEnvVar.cpp
tests/src/androidTest/java/com/viliussutkus89/android/executablerunner/: InstrumentedTests.java
tests/src/androidTest/java/com/viliussutkus89/executablerunner/: InstrumentedTests.java
tests/src/main/: AndroidManifest.xml
